added /auth/email/check endpoint
