# server/src/spec/openapi.yaml
@@ -405,7 +405,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/EmailCheckSuccessResponse"
         "400":
-          description: Invalid request body or email already exists in the system.
+          description: Invalid request body.
           headers:
             X-Request-Id:
               $ref: "#/components/headers/XRequestId"
@@ -414,12 +414,8 @@ paths:
               examples:
                 InvalidRequestBodyValidationError:
                   $ref: '#/components/examples/InvalidRequestBodyValidationErrorExample'
-                EmailAlreadyExistsError:
-                  $ref: '#/components/examples/EmailAlreadyExistsErrorExample'
               schema:
-                oneOf:
-                  - $ref: "#/components/schemas/InvalidRequestBodyValidationError"
-                  - $ref: "#/components/schemas/EmailAlreadyExistsError"
+                  $ref: "#/components/schemas/InvalidRequestBodyValidationError"
   /auth/email/verify:
     post:
       tags: [Password Authentication Module]
@@ -4210,7 +4206,7 @@ components:
           example: 200
         message:
           type: string
-          example: "User sessions retrieved successfully."
+          example: "Email does not exists in our database. Please register a new account !"
         data: 
           type: object
           required: 
@@ -4221,7 +4217,7 @@ components:
               type: string
               description: User email address.
               example: john.doe@gmail.com
-            isEmailSuccessfullySend:
+            isNewEmail:
               type: boolean
               description: Boolean value validating if email address is not registered in database.
               example: true
